--- a/pages/imitate/school/content/content.wxml
+++ b/pages/imitate/school/content/content.wxml
@@ -1,6 +1,29 @@
 <!--pages/imitate/school/content/content.wxml-->
-<checkbox-group bindchange="checkboxChange">
-  <label class="checkbox" wx:for="{{school}}">
-    <checkbox value="{{item.NAME}}" checked="{{item.checked}}"/>{{item.NAME}}
-  </label>
-</checkbox-group>
+<view class='page'>
+<view class="weui-search-bar">
+        <view class="weui-search-bar__form">
+            <view class="weui-search-bar__box">
+                <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
+                <input type="text" class="weui-search-bar__input" placeholder="搜索" value="{{inputVal}}" focus="{{inputShowed}}" bindinput="inputTyping" />
+                <view class="weui-icon-clear" wx:if="{{inputVal.length > 0}}" bindtap="clearInput">
+                    <icon type="clear" size="14"></icon>
+                </view>
+            </view>
+            <label class="weui-search-bar__label" hidden="{{inputShowed}}" bindtap="showInput">
+                <icon class="weui-icon-search" type="search" size="14"></icon>
+                <view class="weui-search-bar__text">搜索</view>
+            </label>
+        </view>
+        <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="setSearchStorage">搜索</view>
+    </view>  
+  <view class='page_bd'>
+    <block wx:for="{{school}}" wx:key="">
+      <view class="weui-cells weui-cells_after-title" bindtap="school" id="{{item.SCHOOL_ID}}" hidden ="{{item.checked}}" >
+            <view class="weui-cell">
+                <view class="weui-cell__bd">{{item.NAME}}</view>
+                <view class="weui-cell__ft"></view>
+            </view>
+        </view>
+    </block>
+  </view>
+</view>
