--- a/pages/imitate/school/school.wxml
+++ b/pages/imitate/school/school.wxml
@@ -1,47 +1,48 @@
-<!--pages/imitate/school/school.wxml-->
+ <!--pages/imitate/school/school.wxml-->
 <view class='page'>
   <view class='page_bd'>
     <view class="weui-cells weui-cells_after-title">
-        <navigator url="/pages/imitate/school/content/content" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-            <view class="weui-cell__bd">{{school_1}}</view>
+        <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" data-id="{{index}}" bindtap='school' id="{{school_1_id}}">
+            <view class="weui-cell__bd" >{{school_1}}</view>
             <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-        </navigator>
+        </view>
     </view>
     <view class="weui-cells weui-cells_after-title">
-        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-            <view class="weui-cell__bd">{{major_1}}</view>
+        <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='major' id='major_1'>
+            <view class="weui-cell__bd" id="{{major_1_id}}">{{major_1_name}}</view>
             <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-        </navigator>
+        </view>
     </view>
     <view class="weui-cells weui-cells_after-title">
-        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-            <view class="weui-cell__bd">{{major_2}}</view>
+        <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='major' id='major_2'>
+            <view class="weui-cell__bd" id='{{major_2_id}}'>{{major_2_name}}</view>
             <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-        </navigator>
+        </view>
     </view>
     <view class="weui-cells weui-cells_after-title">
-        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-            <view class="weui-cell__bd">{{major_3}}</view>
+        <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='major' id='major_3'>
+            <view class="weui-cell__bd" id='{{major_3_id}}'>{{major_3_name}}</view>
             <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-        </navigator>
+        </view>
     </view>
     <view class="weui-cells weui-cells_after-title">
-        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-            <view class="weui-cell__bd">{{major_4}}</view>
+        <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='major' id='major_4'>
+            <view class="weui-cell__bd" id='{{major_4_id}}'>{{major_4_name}}</view>
             <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-        </navigator>
+        </view>
     </view>
     <view class="weui-cells weui-cells_after-title">
-        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-            <view class="weui-cell__bd">{{major_5}}</view>
+        <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='major' id='major_5'>
+            <view class="weui-cell__bd" id='{{major_5_id}}'>{{major_5_name}}</view>
             <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-        </navigator>
+        </view>
     </view>
     <view class="weui-cells weui-cells_after-title">
-        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-            <view class="weui-cell__bd">{{major_6}}</view>
+        <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='major' id='major_6'>
+            <view class="weui-cell__bd" id='{{major_6_id}}'>{{major_6_name}}</view>
             <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-        </navigator>
+        </view>
     </view>
   </view>
+  <button class="weui-btn" type="primary" bindtap='back'>确定</button>
 </view>
