--- a/pages/intelligence/result/content/content.wxml
+++ b/pages/intelligence/result/content/content.wxml
@@ -1,28 +1,87 @@
 <!--pages/analog/analogs/result/content/content.wxml-->
-<view class="page">
-  <view class="page__hd">
-    <view class="page__title">{{results[0].NAME}}</view>
-  </view>
   <view class="page_bd">
-    <view class='center'>
-      <view class='center-item'>年份</view>
-      <view class='center-item'>最高分</view>
-      <view class='center-item'>最低分</view>
-      <view class='center-item'>录取人数</view>
+    <view class="banner">
+      <image src='/images/tb.png'></image>
     </view>
-    <view class='bottom'>
-      <view class='bottom-item'>
-        <text wx:for="{{results}}" wx:key="item.MJSCORE_ID">{{item.YEAR_VALUE}}</text>
+    <view class="top">
+      <view class="top-left">
+        <image src="{{logo}}" style='width:170rpx;height:170rpx;border-radius:50%'></image>
       </view>
-      <view class='bottom-item'>
-        <text wx:for="{{results}}" wx:key="item.MJSCORE_ID">{{item.MAXSCORE}}</text>
+      <view class="top-right">
+        <view class='top-right-1'>
+          <text>{{name}}</text>
+          <image wx:for="{{properties}}" wx:key="" src="/images/icon/{{item.DIC_ID}}.png" style='width:50rpx;height:50rpx'></image>
+        </view>
+        <view class='top-right-2'>
+          <text>{{types}}</text>
+          <text>{{region}}</text>
+          <image wx:for="{{subjecttypes}}" wx:key="" src="/images/icon/{{item.DIC_ID}}.png" style='width:80rpx;height:40rpx;margin-right:15rpx;'></image>
+        </view>
       </view>
-      <view class='bottom-item'>
-        <text wx:for="{{results}}" wx:key="item.MJSCORE_ID">{{item.MINSCORE}}</text>
+    </view>
+    <view class='top-2'>
+      <view class='top-2-left'>
+        <text>报考建议：风险{{advice}}，请慎重考虑</text>
       </view>
-      <view class='bottom-item'>
-        <text wx:for="{{results}}" wx:key="item.MJSCORE_ID">{{item.ENTERCOUNT}}</text>
+      <image src="/images/{{img}}.png" style='width:80rpx;height:80rpx'></image>
+    </view>
+    <view class="page__bd page__bd_spacing">
+        <view class="weui-flex">
+            <view class="weui-flex__item">
+              <view class="placeholder" style='text-align:left'>院校历年数据：</view></view>
+              <view class="weui-flex__item"><view class="placeholder" style='text-align:right'>{{style}}　{{subject}}</view>
+            </view>
+        </view>
+        <view class="weui-flex">
+            <view class="weui-flex__item"><view class="placeholder">年份</view></view>
+            <view class="weui-flex__item"><view class="placeholder">最高分</view></view>
+            <view class="weui-flex__item"><view class="placeholder">最低分</view></view>
+            <view class="weui-flex__item"><view class="placeholder">录取人数</view></view>
+        </view>
+        
+        <view class="weui-flex">
+            <view class="weui-flex__item"><view class="placeholder" wx:for="{{grade}}" wx:key="" hidden='{{item.checked}}'>{{item.YEAR_VALUE}}</view></view>
+            <view class="weui-flex__item"><view class="placeholder" wx:for="{{grade}}" wx:key="" hidden='{{item.checked}}'> {{item.MAXSCORE}}</view></view>
+            <view class="weui-flex__item"><view class="placeholder" wx:for="{{grade}}" wx:key="" hidden='{{item.checked}}'>{{item.MINSCORE}}</view></view>
+            <view class="weui-flex__item"><view class="placeholder" wx:for="{{grade}}" wx:key="" hidden='{{item.checked}}'>{{item.ENTERCOUNT}}</view></view>
+        </view>
+    </view>
+    <view style="background-color:white">
+    <view class="page__bd page__bd_spacing">
+      <view class="weui-flex">
+            <view class="weui-flex__item"><view class="placeholder" style='text-align:left'>专业招生计划及历年数据：</view></view>
+      </view>
+    </view>
+    <view class='whole'>
+      <view class='left'><text>招生专业</text></view>
+      <view class='right'>
+        <view class="page__bd page__bd_spacing">
+          <view class="weui-flex">
+            <view class="weui-flex__item">
+              <view class="placeholder">专业历年招生统计</view>
+            </view>
+          </view>
+          <view class="weui-flex">
+            <view class="weui-flex__item"><view class="placeholder">年份</view></view>
+            <view class="weui-flex__item"><view class="placeholder">最高分</view></view>
+            <view class="weui-flex__item"><view class="placeholder">最低分</view></view>
+            <view class="weui-flex__item"><view class="placeholder">录取数</view></view>
+        </view>
+        </view>
+      </view>
+    </view>
+    <view wx:for="{{results}}" wx:key="*this" class='whole'>
+      <view class='left'><text>{{item.MJNAME}}</text></view>
+      <view class='right'>
+        <view class="page__bd page__bd_spacing" wx:for="{{item.scores}}" wx:for-item="score" wx:key="">
+          <view class="weui-flex">
+            <view class="weui-flex__item year"><view class="placeholder" >{{score.YEAR_VALUE}}</view></view>
+            <view class="weui-flex__item year"><view class="placeholder" >{{score.MAXSCORE}}</view></view>
+            <view class="weui-flex__item year"><view class="placeholder" >{{score.MINSCORE}}</view></view>
+            <view class="weui-flex__item year"><view class="placeholder">{{score.MSORT}}</view></view>     
+        </view>  
+        </view>
       </view>
     </view>
   </view>
-</view>
+  </view>
