--- a/pages/intelligence/result/result.wxml
+++ b/pages/intelligence/result/result.wxml
@@ -1,76 +1,48 @@
 <view class="page">
     <view class="page__bd">
-        <view class="weui-tab">
-            <view class="weui-navbar">
-                <block wx:for="{{tabs}}" wx:key="*this">
-                    <view id="{{index}}" class="weui-navbar__item {{activeIndex == index ? 'weui-bar__item_on' : ''}}" bindtap="tabClick">
-                        <view class="weui-navbar__title">{{item}}</view>
-                    </view>
-                </block>
-                <view class="weui-navbar__slider" style="left: {{sliderLeft}}px; transform: translateX({{sliderOffset}}px); -webkit-transform: translateX({{sliderOffset}}px);"></view>
-            </view>
-            <view class="weui-tab__panel">
-              <view class="weui-tab__content" hidden="{{activeIndex != 0}}">
               <block wx:for="{{listChong}}" wx:key="" >
-                <view class="weui-cells__title"></view>
-                <view class="weui-cells weui-cells_after-title">
-                    <view class="weui-cell weui-cell_access"  hover-class="weui-cell_active" bindtap="showChong" data-id="{{item.SCHOOL_ID}}">
-                        <view class="weui-cell__bd">{{item.NAME}}</view>
-                        <view class="weui-cell__ft weui-cell__ft_in-access {{!item.checked ? '': 'rotate_90'}}"></view>
+                <view class="weui-cells weui-cells_after-title" bindtap='toDail' id="{{item.SCHOOL_ID}}" data-id="{{item.majors}}" data-name="chong" data-class="极大">
+                <view class="weui-cell">
+                    <view class="weui-cell__hd">
+                        <image src="/images/chong.png" style="margin-right: 22rpx;vertical-align: middle;width:32rpx;height:32rpx;"></image>
                     </view>
-                    <view class="weui-cell weui-cell_access child" hover-class="weui-cell_active" hidden='{{!item.checked}}' wx:for="{{item.majors}}" wx:for-item="major" wx:key="" bindtap="toDail" id="{{item.SCHOOL_ID}}_{{major.MAJOR_ID}}">
-                        <view class="weui-cell__bd">{{major.MJNAME}}</view>
-                        <view class="weui-cell__ft "></view>
-                    </view>
-                  </view>
-                </block>
-              </view>
-              <view class="weui-tab__content" hidden="{{activeIndex != 1}}">
-              <block wx:for="{{listWen}}" wx:key="">
-                <view class="weui-cells__title"></view>
-                <view class="weui-cells weui-cells_after-title">
-                    <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='showWen' data-id='{{item.SCHOOL_ID}}'>
-                        <view class="weui-cell__bd">{{item.NAME}}</view>
-                        <view class="weui-cell__ft weui-cell__ft_in-access {{!item.checked ? '': 'rotate_90'}}"></view>
-                    </view>
-                    <view class="weui-cell weui-cell_access child" hover-class="weui-cell_active" hidden="{{!item.checked}}" wx:for="{{item.majors}}" wx:for-item="major" wx:key="" bindtap="toDail" id="{{item.SCHOOL_ID}}_{{major.MAJOR_ID}}">
-                        <view class="weui-cell__bd">{{major.MJNAME}}</view>
-                        <view class="weui-cell__ft "></view>
-                    </view>
-                  </view>
-              </block>
-              </view>
-              <view class="weui-tab__content" hidden="{{activeIndex != 2}}">
-              <block wx:for="{{listBao}}" wx:key="">
-                <view class="weui-cells__title"></view>
-                <view class="weui-cells weui-cells_after-title">
-                    <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='showBao' data-id="{{item.SCHOOL_ID}}">
-                        <view class="weui-cell__bd">{{item.NAME}}</view>
-                        <view class="weui-cell__ft weui-cell__ft_in-access {{!item.checked ? '': 'rotate_90'}}"></view>
-                    </view>
-                    <view class="weui-cell weui-cell_access child" hover-class="weui-cell_active" wx:for="{{item.majors}}" wx:for-item="major" wx:key="" hidden="{{!item.checked}}" bindtap="toDail" id="{{item.SCHOOL_ID}}_{{major.MAJOR_ID}}">
-                        <view class="weui-cell__bd">{{major.MJNAME}}</view>
-                        <view class="weui-cell__ft "></view>
-                    </view>
-                  </view>
-                </block>
-              </view>
-              <view class="weui-tab__content" hidden="{{activeIndex != 3}}">
-              <block wx:for="{{listDian}}" wx:key="">
-                <view class="weui-cells__title"></view>
-                <view class="weui-cells weui-cells_after-title">
-                    <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='showDian' data-id='{{item.SCHOOL_ID}}'>
-                        <view class="weui-cell__bd">{{item.NAME}}</view>
-                        <view class="weui-cell__ft weui-cell__ft_in-access {{!item.checked ? '': 'rotate_90'}}"></view>
-                    </view>
-                    <view class="weui-cell weui-cell_access child"  hover-class="weui-cell_active" hidden="{{!item.checked}}" wx:for="{{item.majors}}" wx:for-item="major" wx:key="" bindtap="toDail" id="{{item.SCHOOL_ID}}_{{major.MAJOR_ID}}">
-                        <view class="weui-cell__bd">{{major.MJNAME}}</view>
-                        <view class="weui-cell__ft "></view>
-                    </view>
-                  </view>
-                </block>
-              </view>
+                    <view class="weui-cell__bd">{{item.NAME}}</view>
+                    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+                </view>
             </view>
-        </view>
+                </block>
+              <block wx:for="{{listWen}}" wx:key="">
+                <view class="weui-cells weui-cells_after-title" bindtap='toDail'id="{{item.SCHOOL_ID}}" data-id="{{item.majors}}" data-name="wen" data-class="较大" >
+                <view class="weui-cell">
+                    <view class="weui-cell__hd">
+                        <image src="/images/wen.png" style="margin-right: 22rpx;vertical-align: middle;width:32rpx;height:32rpx;"></image>
+                    </view>
+                    <view class="weui-cell__bd">{{item.NAME}}</view>
+                    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+                </view>
+                </view>
+              </block>
+              <block wx:for="{{listBao}}" wx:key="">
+                <view class="weui-cells weui-cells_after-title" bindtap='toDail' id="{{item.SCHOOL_ID}}" data-id="{{item.majors}}" data-name="bao" data-class="较小">
+                <view class="weui-cell">
+                    <view class="weui-cell__hd">
+                        <image src="/images/bao.png" style="margin-right: 22rpx;width:32rpx;height:32rpx;"></image>
+                    </view>
+                    <view class="weui-cell__bd">{{item.NAME}}</view>
+                    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+                </view>
+                </view>
+                </block>
+              <block wx:for="{{listDian}}" wx:key="">
+                <view class="weui-cells weui-cells_after-title" bindtap='toDail' id="{{item.SCHOOL_ID}}" data-id="{{item.majors}}" data-name="dian" data-class="极小">
+                <view class="weui-cell">
+                    <view class="weui-cell__hd">
+                        <image src="/images/dian.png" style="margin-right: 22rpx;vertical-align: middle;width:32rpx; height: 32rpx;"></image>
+                    </view>
+                    <view class="weui-cell__bd">{{item.NAME}}</view>
+                    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+                </view>
+                </view>
+                </block>
     </view>
 </view>
