--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -8,7 +8,7 @@
                     <view class="weui-label">用户名</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <input class="weui-input" placeholder="请输入用户名" bindinput="bindUsername"/>
+                    <input class="weui-input" placeholder="请输入用户名/手机号" bindinput="bindUsername"/>
                 </view>
             </view>
             <view class="weui-cell weui-cell_input">
