--- a/pages/person/information/information.wxml
+++ b/pages/person/information/information.wxml
@@ -9,13 +9,13 @@
             </picker>
       </view>
   </view>   
-  <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+  <view class="weui-cell weui-cell_access">
       <view class="weui-cell__hd"></view>
-      <view class="weui-cell__bd weui-cell_primary" bindtap='region'>
+      <view class="weui-cell__bd weui-cell_primary">
           <text>考生所在地</text>
-          <text class="picker" id="province">{{province}}</text>
+          <text class="picker" id="province">河北省</text>
       </view>
-      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+      <view class="weui-cell__ft"></view>
   </view> 
   <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
       <view class="weui-cell__bd weui-cell_primary">
