--- a/pages/school/schoolcontent/schoolcontent.wxss
+++ b/pages/school/schoolcontent/schoolcontent.wxss
@@ -3,12 +3,13 @@
 .banner{
   width:100%;
   height:300rpx;
+  position:fixed;
+  top:0;
+  z-index:2;
 }
 .banner image{
   width:100%;
   height:300rpx;
-  position:fixed;
-  top:0;
 }
 .icon-property{
   width:40rpx;
@@ -23,8 +24,10 @@
 .logo{
   width:92%;
   height:200rpx;
-  margin:-100rpx 4% 0 4%;
-  position: relative;
+  position:fixed;
+  top:100rpx;
+  left:6%;
+  right:4%;
   z-index:2;
   display: flex;
   flex-direction: row;
@@ -43,8 +46,8 @@
 }
 .logo-right{
   width:65%;
-  height:150rpx;
-  margin-left:7%;
+  height:120rpx;
+  margin-left:5%;
   color:white;
   font-size:30rpx;
   display: flex;
@@ -60,9 +63,7 @@
   border-top:1rpx solid #CCCCCC;
 }
 .content{
-  width:92%;
-  margin:2% 4% 0 4%;
-  background-color:white;
+  margin-top:350rpx;
 }
 .content-top{
   width:100%;
