--- a/pages/consult/consultlist/consultlist.wxml
+++ b/pages/consult/consultlist/consultlist.wxml
@@ -1,15 +1,25 @@
-<view class='header'>
-   <image src="{{src1}}"></image>
+<!--pages/school/schoolcontent/schoolcontent.wxml-->
+<import src="../../../wxParse/wxParse.wxml" />
+<view class="banner">
+  <image src='/images/school.jpg'></image>
 </view>
-<view class='header-bottom'>
-   <view class="header-bottom-left"><image src="{{logo}}"></image></view>
-   <view class="header-bottom-right">
-    <text>{{name}}</text>
-    <view class='map'>{{region}}　|　{{types}}　</view>
+<view class='logo'>
+  <view class='logo-left'>
+     <image src="{{logo}}"></image>  
+  </view>
+  <view class='logo-right'>
+    <view class='logo-text'>
+      <text>{{name}}</text> 
+    </view>
+    <view class='logo-image'>
+      <image wx:for="{{subjecttypes}}" wx:key="" class='icon-subject' src="/images/icon/{{item.DIC_ID}}.png"></image>
+      <image wx:for="{{properties}}" wx:key="" class='icon-property' src="/images/icon/{{item.DIC_ID}}.png"></image>
+    </view>
   </view>
 </view>
-<block wx:for="{{teacher}}" wx:key="">
-<view class="weui-panel__bd" bindtap='chat' data-id="{{item.USER_ID}}">
+
+<view class="content">
+<view class="weui-panel__bd" wx:for="{{teacher}}" wx:key="" bindtap='chat' data-id="{{item.USER_ID}}">
   <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
       <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
           <image class="weui-media-box__thumb" src="{{item.HEADURL}}" />
@@ -22,4 +32,108 @@
       </view>
   </view>
 </view>
-</block>
+<view class='message'>
+  <view class="weui-tab">
+      <view class="weui-navbar">
+        <block wx:for="{{tabs}}" wx:key="*this">
+          <view id="{{index}}" class="weui-navbar__item {{activeIndex == index ? 'weui-bar__item_on' : ''}}" bindtap="tabClick">
+              <view class="weui-navbar__title">{{item}}</view>
+          </view>
+        </block>
+    </view>
+  </view>
+  <view class="weui-tab__panel">
+    <view class="weui-tab__content" hidden="{{activeIndex != 0}}">
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell">
+            <view class="weui-cell__hd">
+                <image src="{{icon}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+            </view>
+            <view class="weui-cell__bd">河北省</view>
+            <view class="weui-cell__ft">
+              <picker bindchange="bindPickerChange" value="{{index}}" range="{{array}}" range-key='NAME' data-id="{{school_id}}" id="{{array[index].DIC_ID}}">
+                <view>{{array[index].NAME}}</view>
+              </picker>
+            </view>
+        </view>
+      </view>
+      <view class='center'>
+        <view class='center-item' style='width:15%'>年份</view>
+        <view class='center-item' style='width:15%'>批次</view>
+        <view class='center-item'>分数区间</view>
+        <view class='center-item' style='width:30%'>排名</view>
+        <view class='center-item'>录取数</view>
+      </view>
+      <view wx:if="{{grade.length == 0}}">
+        <view class='bottom' >
+        <view class='bottom-item' style='width:15%'>
+          <text>---</text>
+          <text>---</text>
+        </view>
+        <view class='bottom-item' style='width:15%'>
+          <text>---</text>
+          <text>---</text>
+        </view>
+        <view class='bottom-item'>
+          <text>---</text>
+          <text>---</text>
+        </view> 
+        <view class='bottom-item' style='width:30%'>
+          <text>---</text>
+          <text>---</text>
+        </view>
+        <view class='bottom-item'>
+          <text>---</text>
+          <text>---</text>
+        </view>
+      </view>
+      </view>
+      <view wx:else>
+        <view class='bottom' wx:for="{{grade}}" wx:key="">
+        <view class='bottom-item' style='width:15%'>
+          <text>{{item.YEAR_VALUE}}</text>
+        </view>
+        <view class='bottom-item' style='width:15%'>
+          <text>{{item.ARRANGMENT_VALUE}}</text>
+        </view>
+        <view class='bottom-item'>
+          <text>{{item.MINSCORE}}~{{item.MAXSCORE}}</text>
+        </view> 
+        <view class='bottom-item' style='width:30%'>
+          <text>{{item.MinPM}}~{{item.MaxPM}}</text>
+        </view>
+        <view class='bottom-item'>
+          <text>{{item.ENTERCOUNT}}</text>
+        </view>
+      </view>
+    </view>
+    </view>
+    <view class="weui-tab__content" hidden="{{activeIndex != 1}}">
+      <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__bd">学校类别</view>
+        <view class="weui-cell__ft">{{types}}</view>
+      </view>
+      <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__bd">学校类型</view>
+        <view class="weui-cell__ft"><image wx:for="{{subjecttypes}}"  wx:key="" class='icon-subject' src="/images/icon/{{item.DIC_ID}}.png"></image></view>
+      </view>
+      <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+          <view class="weui-cell__bd">所在地</view>
+          <view class="weui-cell__ft ">{{region}}</view>
+      </view>
+      <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+          <view class="weui-cell__bd">创建时间</view>
+          <view class="weui-cell__ft ">{{date}}</view>
+      </view>
+      <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+          <view class="weui-cell__bd">隶属于</view>
+          <view class="weui-cell__ft ">{{subject}}</view>
+      </view>
+    </view>
+    <view class="weui-tab__content" style='padding:30rpx 5%' hidden="{{activeIndex != 2}}">  
+      <template is="wxParse" data="{{wxParseData:content.nodes}}" />
+    </view>
+  </view>
+</view>
+</view>
+<view class='lines'></view>
