--- a/pages/consult/consultlist/consultlist.wxss
+++ b/pages/consult/consultlist/consultlist.wxss
@@ -1,70 +1,171 @@
 /* pages/consult/consultlist/consultlist.wxss */
-.header{
-  width: 100%;
+@import '/wxParse/wxParse.wxss';
+.banner{
+  width:100%;
+  height:300rpx;
+  position:fixed;
+  top:0;
+  z-index:2;
+}
+.banner image{
+  width:100%;
   height:300rpx;
 }
-.header image{
-  width:100%;
-  height:100%;
+.icon-property{
+  width:40rpx;
+  height:40rpx;
+  margin:0 2% 0 0;
 }
-.header-bottom{
+.icon-subject{
+  width:60rpx;
+  height:40rpx;
+  margin:0 2% 0 0;
+}
+.logo{
+  width:92%;
+  height:200rpx;
+  position:fixed;
+  top:100rpx;
+  left:6%;
+  right:4%;
+  z-index:2;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 }
-.header-bottom-left{
+.logo-left{
   width:22%;
   height:150rpx;
-  margin-left:4%;
-  margin-top: -100rpx;
   border-radius:75rpx;
   overflow: hidden;
 }
-.header-bottom-left image{
+.logo-left image{
   width:100%;
   height:100%;
 }
-.header-bottom-right{
-  width:60%;
-  margin-left:30rpx;
-  margin-top: -60rpx;
+.logo-right{
+  width:65%;
+  height:120rpx;
+  margin-left:5%;
   color:white;
-  font-size:32rpx;
+  font-size:30rpx;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
-.map{
-  color:#999999;
-  padding-top: 30rpx;
+.logo-text{
+  font-size:35rpx;
+}
+.line{
+  width:100%;
+  height:1rpx;
+  border-top:1rpx solid #CCCCCC;
+}
+.content{
+  margin-top:320rpx;
+}
+.content-top{
+  width:100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
   font-size:28rpx;
 }
+.content-top image{
+   width:30rpx;
+   height:30rpx;
+   margin-right:2%;
+}
+.content-center{
+  font-size:28rpx;
+  width:100%;
+  height:200rpx;
+  overflow: hidden;
+}
+.message{
+  background-color:white;
+}
+.weui-navbar{
+  width:80%;
+  margin:0 10%;
+  font-size:28rpx;
+  border-bottom:0;
+}
+.weui-navbar__item{
+  border:1rpx solid rgb(90,180,170);
+  border-radius: 5rpx;
+  width:40%;
+  margin:5% 0;
+  padding:8rpx 25rpx;
+  color:rgb(90,180,170);
+}
+.weui-navbar{
+  position: static;
+  border:0;
+}
+.weui-tab__panel{
+  padding-top:0;
+}
+.weui-navbar__item.weui-bar__item_on {
+  background-color:rgb(90,180,170);
+  color:white;
+}
 .center{
+  width:100%;
   display: flex;
   flex-direction: row;
-  justify-content:center;
+  font-size:28rpx;
+  background-color: #DDDDDD;
+}
+.center-item{
+  width:20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bottom{
+  width:100%;
   margin-top:20rpx;
-  padding:20rpx 20rpx; 
+  display: flex;
+  flex-direction: row;
+  font-size:28rpx;
   background-color: white;
 }
-.center-left{
-  width:30%;
-  height:60rpx;
+.bottom-item{
+  width:20%;
   display: flex;
-  flex-direction: row;
-  justify-content:center;
-} 
-.center-center{
-  width:30%;
-  height:60rpx;
-  display: flex;
-  flex-direction: row;
-  justify-content:center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.center-right{
-  width:30%;
-  height:60rpx;  
+.weui-cell{
+  font-size:28rpx;
+}
+.weui-cell__ft image{
+  width:80rpx;
+  height:40rpx;
+}
+.types{
   display: flex;
   flex-direction: row;
-  justify-content:center;
+  justify-content: space-between;
+  align-items: center;
+}
+.blank{
+  margin-top:40rpx;
+}
+.weui-cells:before{
+  border-top:0;
+}
+.weui-cell:before{
+  border-top:0;
+}
+.weui-cells:after{
+  border-bottom:0;
+}
+.lines{
+  width:100%;
+  height:100rpx;
 }
