--- a/pages/intelligence/major/major.wxml
+++ b/pages/intelligence/major/major.wxml
@@ -1,5 +1,5 @@
 <!--pages/intelligence/major/major.wxml-->
-<view class="page">
+<view class="page">  
     <view class="page__bd">
 		<view class="weui-cells weui-cells_after-title">
       <checkbox-group bindchange="serviceValChange">
@@ -11,7 +11,7 @@
           </view>
           <view class="weui-cell__bd">不限</view>
         </label>
-        <label class="weui-cell weui-check__label" wx:for="{{majors}}" wx:key="DIC_ID">
+        <label class="weui-cell weui-check__label" wx:for="{{majors}}" wx:key="DIC_ID" hidden ="{{item.check}}">
           <checkbox class="weui-check" value="{{index}}" checked="{{item.checked}}"/>
           <view class="weui-cell__hd weui-check__hd_in-checkbox">
             <icon class="weui-icon-checkbox_circle" type="circle" size="23" wx:if="{{!item.checked}}"></icon>
