--- a/pages/news/news.wxml
+++ b/pages/news/news.wxml
@@ -1,13 +1,13 @@
 <!--pages/news/news.wxml-->
 <view  style="padding:15rpx 0;">
   <block wx:for="{{news}}" wx:key="" id="{{index}}" >
-  <view style='display:flex;flex-direction:row;' bindtap='news' data-id="{{item.NEWS_ID}}">
+  <view style='display:flex;flex-direction:row;margin-top:40rpx;' bindtap='news' data-id="{{item.NEWS_ID}}">
     <view class='news'>
       <image src='{{item.IMGURL}}' style='width:100%;height:100%;'></image>
     </view>
     <view class='headlines' >
-      <view style='height:40px;'>{{item.TITLE}}</view>
-      <view class="flex-x" style='margin-top:40rpx;'>
+      <view style='height:40px;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;'>{{item.TITLE}}</view>
+      <view class="flex-x" style='margin-top:0;'>
         <view class='flex-x' style='margin-right: 20rpx;'>
           <image class='icon' src='../../images/time.png'></image>
           <span class='time-t'>{{item.MODIFYTIME}}</span>
@@ -20,9 +20,5 @@
     </view>
   </view>
   </block>
-  <!-- <view class="weui-loadmore" hidden='{{!isLoadingMore}}'>
-    <view class="weui-loading"></view>
-    <view class="weui-loadmore__tips">正在加载</view>
-</view> -->
 </view>
    
