--- a/pages/person/goods/goods.wxml
+++ b/pages/person/goods/goods.wxml
@@ -1,19 +1,19 @@
 <!--pages/person/goods/goods.wxml-->
 <view class='page'>
   <view class='content'>
-    <image src="/images/tb12.png" bindtap="pay"></image>
+    <image src="/images/tb12.png"></image>
     <text >金币</text>
-    <text>剩余金币：{{pocket.BALANCE}}个</text> 
+    <text>剩余金币：{{BALANCE}}</text> 
   </view>
   <view class='contents' bindtap="consult">
      <image src="/images/tb13.png"></image>
      <text>院校咨询卡</text>
-     <text>院校咨询卡：{{pocket.yxzxk}}张</text> 
+     <text>院校咨询卡：{{yxzxk}}</text> 
   </view>
   <view class='content' bindtap="analog">
      <image src="/images/tb14.png"></image>
      <text>模拟填报卡</text>
-     <text>模拟填报卡：{{pocket.mntbk}}张</text> 
+     <text>模拟填报卡：{{mntbk}}</text> 
   </view>
 </view>
 <view class="line"></view>
@@ -21,7 +21,7 @@
   <view class='contentss' bindtap="intelligence">
      <image src="/images/tb15.png"></image>
      <text>智能推荐卡</text>
-     <text>智能推荐卡：{{pocket.zntjk}}张</text> 
+     <text>智能推荐卡：{{zntjk}}</text> 
   </view>
 </view>
 <view class="lines"></view>
