--- a/pages/person/person.wxml
+++ b/pages/person/person.wxml
@@ -6,6 +6,7 @@
     <view class='text'>
       <view class='text-top'><text>{{nickname}}</text></view>
       <view class='text-bottom' wx:if="{{role == 1}}"><image src="{{vip}}" style='width:90rpx;height:45rpx'></image></view>
+      
     </view>
   </view>
   <view class="head-right">
@@ -75,16 +76,16 @@
 </view>
 <view wx:elif="{{role==2}}">
   <view class="head">
-  <image src="/images/banner.png"></image>
   <view class="head-left">
     <view class='image'><image src="{{logo2}}" style="width:130rpx;height:130rpx;" bindtap="chooseImageTap"></image></view>
     <view class='text'>
-      <view class='text-top'><text>{{nickname2}}</text></view>
+      <view class='text-top'><text style='font-size:35rpx'>{{nickname2}}</text></view>
+      <view class='text-bottom' wx:if="{{role == 2}}"><text>{{scname}}</text></view>
     </view>
   </view>
   <view class="head-right">
-    <view class='number'>{{completeCount2}}%</view>
-    <view class='texts'>信息完整度</view>
+    <view class='number' style='font-size:80rpx'>90分</view>
+    <view class='texts'style='font-size:30rpx'>评价</view>
   </view>
 </view>
 <view class="weui-panel">
@@ -98,13 +99,7 @@
                   </view>
                   <view class="weui-cell__ft weui-cell__ft_in-access"></view>
               </navigator>
-              <navigator url="../person/goods/goods" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-                  <view class="weui-cell__hd"><image src="/images/tb03.png" style="width: 20px;height: 20px;margin-right: 5px" /></view>
-                  <view class="weui-cell__bd weui-cell_primary">
-                      <view>我的物品</view>
-                  </view>
-                  <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-              </navigator>
+              
               <navigator url="../person/security/security" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                   <view class="weui-cell__hd"><image src="/images/tb04.png" style="width: 20px;height: 20px;margin-right: 5px" /></view>
                   <view class="weui-cell__bd weui-cell_primary">
