--- a/pages/school/school.wxml
+++ b/pages/school/school.wxml
@@ -55,14 +55,12 @@
   <view class="demo-text-1">批次</view>
   <view class="demo-text-2">
     <checkbox-group bindchange="changeArrangment">  
-        <view class="service_selection1">  
-          <block wx:for="{{arrangments}}" wx:key="NAME" wx:for-index="i" wx:if="{{i<2}}">   
-              <label class="checkbox {{item.checked?'is_checked':''}}">  
-                <checkbox value="{{index}}" checked="{{checked}}" hidden="false"/>{{item.NAME}}  
-              </label>  
-          </block>  
+        <view class="service_selection1">    
+              <label class="checkbox {{item.checked?'is_checked':''}}"  wx:for="{{arrangments}}" wx:key="NAME" wx:for-index="i" wx:if="{{i<2}}">  
+                <checkbox value="{{i}}"  hidden="false" checked="{{checked}}" />{{item.NAME}}  
+              </label>
         </view>  
-    </checkbox-group> 
+    </checkbox-group>  
   </view>
 </view>
 <view class="page-body">
