--- a/pages/school/schoolcontent/schoolcontent.wxml
+++ b/pages/school/schoolcontent/schoolcontent.wxml
@@ -11,26 +11,14 @@
     <view class='logo-text'>
       <text>{{name}}</text> 
     </view>
+    
     <view class='logo-image'>
-      <image wx:for="{{subjecttypes}}" class='icon-subject' src="/images/icon/{{item.DIC_ID}}.png"></image>
-      <image wx:for="{{properties}}" class='icon-property' src="/images/icon/{{item.DIC_ID}}.png"></image>
+      <image wx:for="{{subjecttypes}}" wx:key="" class='icon-subject' src="/images/icon/{{item.DIC_ID}}.png"></image>
+      <image wx:for="{{properties}}" wx:key="" class='icon-property' src="/images/icon/{{item.DIC_ID}}.png"></image>
     </view>
   </view>
 </view>
 <view class="content">
-<view class="weui-cells__title"></view>
-<view class="weui-cells weui-cells_after-title" bindtap='contentshow'>
-    <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-        <view class="weui-cell__hd">
-            <image src="{{icon1}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
-        </view>
-        <view class="weui-cell__bd">学校简介</view>
-        <view class="weui-cell__ft weui-cell__ft_in-access {{ !showView? '': 'rotate_90'}}"></view>
-    </view>
-    <view class="{{showView?'show':'hide'}}">
-      <template is="wxParse" data="{{wxParseData:content.nodes}}" />
-    </view>
-</view>
 <view class='message'>
   <view class="weui-tab">
       <view class="weui-navbar">
@@ -57,31 +45,55 @@
         </view>
       </view>
       <view class='center'>
-        <view class='center-item'>年份</view>
-        <view class='center-item'>批次</view>
-        <view class='center-item'>最高分</view>
-        <view class='center-item'>最低分</view>
-        <view class='center-item'>招生人数</view>
+        <view class='center-item' style='width:15%'>年份</view>
+        <view class='center-item' style='width:15%'>批次</view>
+        <view class='center-item'>分数区间</view>
+        <view class='center-item' style='width:30%'>排名</view>
+        <view class='center-item'>录取数</view>
       </view>
-      <block wx:for="{{grade}}" wx:key="">
-      <view class='bottom'>
-        <view class='bottom-item'>
-          <text>{{item.YEAR_VALUE}}</text>
+      <view wx:if="{{grade.length == 0}}">
+        <view class='bottom' >
+        <view class='bottom-item' style='width:15%'>
+          <text>---</text>
+          <text>---</text>
+        </view>
+        <view class='bottom-item' style='width:15%'>
+          <text>---</text>
+          <text>---</text>
+        </view>
+        <view class='bottom-item' >
+          <text>---</text>
+          <text>---</text>
+        </view> 
+        <view class='bottom-item' style='width:30%'>
+          <text>---</text>
+          <text>---</text>
         </view>
         <view class='bottom-item'>
+          <text>---</text>
+          <text>---</text>
+        </view>
+      </view>
+      </view>
+      <view wx:else>
+      <view class='bottom' wx:for="{{grade}}" wx:key="">
+        <view class='bottom-item' style='width:15%'>
+          <text>{{item.YEAR_VALUE}}</text>
+        </view>
+        <view class='bottom-item' style='width:15%'>
           <text>{{item.ARRANGMENT_VALUE}}</text>
         </view>
         <view class='bottom-item'>
-          <text>{{item.MAXSCORE}}</text>
+          <text>{{item.MINSCORE}}~{{item.MAXSCORE}}</text>
         </view>
-        <view class='bottom-item'>
-          <text>{{item.MINSCORE}}</text>
+        <view class='bottom-item' style='width:30%'>
+          <text>{{item.MinPM}}~{{item.MaxPM}}</text>
         </view>
         <view class='bottom-item'>
           <text>{{item.ENTERCOUNT}}</text>
         </view>
       </view>
-      </block>
+    </view>
     </view>
     <view class="weui-tab__content" hidden="{{activeIndex != 1}}">
       <view url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
@@ -90,27 +102,26 @@
       </view>
       <view url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__bd">学校类型</view>
-        <view class="weui-cell__ft"><image wx:for="{{subjecttypes}}" class='icon-subject' src="/images/icon/{{item.DIC_ID}}.png"></image></view>
+        <view class="weui-cell__ft"><image wx:for="{{subjecttypes}}"  wx:key="" class='icon-subject' src="/images/icon/{{item.DIC_ID}}.png"></image></view>
       </view>
-      <view url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+      <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
           <view class="weui-cell__bd">所在地</view>
           <view class="weui-cell__ft ">{{region}}</view>
       </view>
-      <view url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+      <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
           <view class="weui-cell__bd">创建时间</view>
           <view class="weui-cell__ft ">{{date}}</view>
       </view>
-      <view url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+      <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
           <view class="weui-cell__bd">隶属于</view>
           <view class="weui-cell__ft ">{{subject}}</view>
       </view>
     </view>
-    <view class="weui-tab__content" hidden="{{activeIndex != 2}}">  
-      <view class='top'>
-        <image src="/images/tb20.png"></image>
-        <text>招生简章</text>
-      </view>
+    <view class="weui-tab__content" style='padding:30rpx 5%' hidden="{{activeIndex != 2}}">  
+      <template is="wxParse" data="{{wxParseData:content.nodes}}" />
     </view>
   </view>
 </view>
 </view>
+
+<view class="lines"></view>
