--- a/pages/school/schoolcontent/schoolcontent.wxss
+++ b/pages/school/schoolcontent/schoolcontent.wxss
@@ -63,7 +63,7 @@
   border-top:1rpx solid #CCCCCC;
 }
 .content{
-  margin-top:350rpx;
+  margin-top:320rpx;
 }
 .content-top{
   width:100%;
@@ -85,15 +85,13 @@
   overflow: hidden;
 }
 .message{
-  width:92%;
-  margin:4% 4% 0 4%;
   background-color:white;
-  
 }
 .weui-navbar{
   width:80%;
   margin:0 10%;
   font-size:28rpx;
+  border-bottom:0;
 }
 .weui-navbar__item{
   border:1rpx solid rgb(90,180,170);
@@ -113,19 +111,6 @@
 .weui-navbar__item.weui-bar__item_on {
   background-color:rgb(90,180,170);
   color:white;
-}
-.top{
-  width:96%;
-  margin-left:4%;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
-  font-size:28rpx;
-}
-.top image{
-  width:30rpx;
-  height:30rpx;
 }
 .center{
   width:100%;
@@ -169,12 +154,18 @@
   align-items: center;
 }
 .blank{
+  margin-top:40rpx;
+}
+.weui-cells:before{
+  border-top:0;
+}
+.weui-cell:before{
+  border-top:0;
+}
+.weui-cells:after{
+  border-bottom:0;
+}
+.lines{
   width:100%;
   height:100rpx;
-}
-.show{
-  display: block
-}
-.hide{
-  display: none
 }
