--- a/pages/person/power/power.wxss
+++ b/pages/person/power/power.wxss
@@ -10,3 +10,9 @@
   width:150rpx;
   height:150rpx;
 }
+/* .weui-grid{
+  background-color: black;
+  opacity: 0.1;
+  position: absolute;
+  z-index:2;
+} */
