--- a/pages/school/schoolcontent/schoolcontent.wxml
+++ b/pages/school/schoolcontent/schoolcontent.wxml
@@ -123,5 +123,21 @@
   </view>
 </view>
 </view>
-
+<view class="weui-cells__title"></view>
+<view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell">
+                <view class="weui-cell__hd">
+                    <image src="{{icon1}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+                </view>
+                <view class="weui-cell__bd">招生简章</view>
+                <view class="weui-cell__ft"></view>
+            </view>
+            <view class="weui-cell">
+                <view class="weui-cell__hd">
+                    <image src="{{icon1}}" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+                </view>
+                <view class="weui-cell__bd">招生计划</view>
+                <view class="weui-cell__ft"></view>
+            </view>
+        </view>
 <view class="lines"></view>
