--- a/pages/person/person.wxml
+++ b/pages/person/person.wxml
@@ -5,7 +5,7 @@
     <view class='image'><image src="{{logo}}" bindtap="chooseImageTap"></image></view>
     <view class='text'>
       <view class='text-top'><text>{{nickname}}</text></view>
-      <view class='text-bottom' wx:if="{{role == 1}}"><image src="{{vip}}" style='width:90rpx;height:45rpx'></image></view>
+      <view class='text-bottom' wx:if="{{role == 1}}"><image src="{{vipname}}" style='width:90rpx;height:45rpx'></image></view>
       
     </view>
   </view>
@@ -24,8 +24,9 @@
   </view>
   <view class='center-right' bindtap='toPocket'>
     <view class='numbers'>{{valiablePocket}}个</view>
+    <!-- <view class="pay">去购买</view> -->
     <view class="img">
-      <image src="/images/money.png" style="width:30rpx;height:30rpx"></image> 
+      <image src="/images/money.png" style="width:30rpx;height:30rpx"></image>
       <text>金币/积分</text>
     </view>
   </view>
@@ -48,13 +49,13 @@
                   </view>
                   <view class="weui-cell__ft weui-cell__ft_in-access"></view>
               </navigator>
-              <navigator url="../person/goods/goods" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+              <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap="goods">
                   <view class="weui-cell__hd"><image src="/images/tb03.png" style="width: 20px;height: 20px;margin-right: 5px" /></view>
                   <view class="weui-cell__bd weui-cell_primary">
                       <view>我的物品</view>
                   </view>
                   <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-              </navigator>
+              </view>
               <navigator url="../person/security/security" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
                   <view class="weui-cell__hd"><image src="/images/tb04.png" style="width: 20px;height: 20px;margin-right: 5px" /></view>
                   <view class="weui-cell__bd weui-cell_primary">
@@ -62,13 +63,13 @@
                   </view>
                   <view class="weui-cell__ft weui-cell__ft_in-access"></view>
               </navigator>
-              <navigator url="../person/power/power" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+              <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap="power">
                   <view class="weui-cell__hd"><image src="/images/tb05.png" style="width: 20px;height: 20px;margin-right: 5px" /></view>
                   <view class="weui-cell__bd weui-cell_primary">
                       <view>账户权限</view>
                   </view>
                   <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-              </navigator>
+              </view>
           </view>
       </view>
   </view>
