--- a/pages/character/character.wxss
+++ b/pages/character/character.wxss
@@ -15,7 +15,7 @@ image{
 }
 .text{
     color:white;
-    padding-top:280px;
+    padding-top:300px;
     height:110px;
     display: flex;
     flex-direction: column;
@@ -31,7 +31,7 @@ image{
   -webkit-transform: rotate(90deg);
 }
 .start{
-  width:200rpx;
-  height:50rpx;
+  padding:15rpx  60rpx;
   border:1rpx solid white;
+  
 }
