--- a/pages/contacts/contacts.wxss
+++ b/pages/contacts/contacts.wxss
@@ -1,10 +1,114 @@
 /* pages/contacts/contacts.wxss */
 
-.weui-navbar__item{
+/* .weui-navbar__item{
   padding:10rpx;
 
 }
 .titles{
   text-align: right;
   font-size:30rpx;
+} */
+.container {
+  display: block;
+}
+.message_list {
+  background-color: #f2f2f2;
+  padding-left: 8rpx;
+  padding-right: 8rpx;
+}
+
+.item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 8rpx;
+  margin-left: 8rpx;
+  margin-right: 8rpx;
+  margin-top: 8rpx;
+  background-color: #fff;
+}
+
+.item-left {
+  margin-top: 15rpx;
+  display: table-cell;
+  text-align: center;
+}
+
+.image {
+  width: 88rpx;
+  height: 88rpx;
+  border-radius: 44rpx;
+  background-color: #eee;
+}
+
+.item-middle {
+  flex: 1;
+  margin-left: 10rpx;
+  padding-top: 13rpx;
+  overflow: hidden;
+}
+
+.title {
+  color: #000;
+  font-family: "微软雅黑";
+  font-weight: bold;
+  line-height: 20rpx;
+  padding: 32rpx 16rpx, 0, 16rpx;
+  font-size: 28rpx;
+  margin-top: 60rpx;
+  overflow: hidden; /*自动隐藏文字*/
+  text-overflow: ellipsis; /*文字隐藏后添加省略号*/
+}
+.s_title{
+  font-size: 28rpx;
+  padding:15rpx 10rpx;
+}
+.s_middle{
+  flex: 1;
+  margin-left: 10rpx;
+  overflow: hidden;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.message {
+  font-family: "微软雅黑";
+  color: #808080;
+  line-height: 10rpx;
+  font-size: 25rpx;
+  padding: 0 16rpx, 0, 16rpx;
+  overflow: hidden; /**自动隐藏文字*/
+  text-overflow: ellipsis; /**文字隐藏后添加省略号*/
+  white-space: nowrap; /**强制不换行*/
+}
+
+.item_right {
+  padding-top: 13rpx;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/* 
+.time {
+  color: #808080;
+  font-size: 18rpx;
+} */
+
+.mark {
+  margin-top: 4rpx;
+  background-color: #f74c31;
+  text-align: center;
+  line-height: 35rpx;
+  font-size: 28rpx;
+  width: 35rpx;
+  height: 35rpx;
+  border-radius: 18rpx;
+  color: #fff;
+}
+
+.line {
+  height: 1px;
+  width: 100%;
+  background-color: #e0e1e2;
 }
