--- a/pages/person/goods/goods.wxml
+++ b/pages/person/goods/goods.wxml
@@ -1,16 +1,16 @@
 <!--pages/person/goods/goods.wxml-->
 <view class='page'>
-  <view class='content' bindtap="pay" id="1">
+  <view class='content'>
     <image src="/images/tb12.png"></image>
     <text >金币</text>
     <text>剩余金币：{{BALANCE}}</text> 
   </view>
-  <view class='contents' bindtap="consult" id="2">
+  <view class='contents'>
      <image src="/images/tb13.png"></image>
      <text>院校咨询卡</text>
      <text>院校咨询卡：{{yxzxk}}</text> 
   </view>
-  <view class='content' bindtap="analog" id="3">
+  <view class='content'>
      <image src="/images/tb14.png"></image>
      <text>模拟填报卡</text>
      <text>模拟填报卡：{{mntbk}}</text> 
@@ -18,7 +18,7 @@
 </view>
 <view class="line"></view>
 <view class='page'>
-  <view class='contentss' bindtap="intelligence" id="4">
+  <view class='contentss'>
      <image src="/images/tb15.png"></image>
      <text>智能推荐卡</text>
      <text>智能推荐卡：{{zntjk}}</text> 
